# dmx-512-controller

./: .editorconfig  .env.development  .gitattributes  .gitignore  .npmrc  .spark-initial-sha  .wslconfig  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ICONS_README.md  PRD.md  README.md  check-virtualization.ps1  eslint.config.js  fix-wsl.ps1  index.html  install-dependencies.bat  install-ubuntu.ps1  manifest.json  package-lock.json  package.json  run-tests.bat  runtime.config.json  server.js  start-all.bat  start-backend.bat  start-frontend.bat  tailwind.config.js  temp_custompage_truncated.tsx  temp_head.tsx  temp_patch.txt  tmp_ws_metrics.py  tsconfig.json  vite.config.ts  vitest.config.ts  watch-tests.bat
.github/: PULL_REQUEST_TEMPLATE.md
config/: patch.yaml
data/: cmd_seen.json  state.json
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/resources/: license.rtf  splash.html
desktop/src-tauri/src/: main.rs
docs/: AI_AUTOMATION.md  ANDROID_SETUP.md  API.md  ARCHITECTURE.md  CUSTOM_BLOCKS.md  CUSTOM_LAYOUT.md  DEPLOYMENT_GUIDE.md  DESKTOP_APP.md  DESKTOP_INSTALL.md  DESKTOP_WRAPPER_PLAN.md  FAQ.md  FEATURES.md  GLOSSARY.md  ICONS_README.md  OBSERVABILITY.md  PRD.md  QUICKSTART_ANDROID.md  README.md  ROADMAP.md  SEED_DATA.md  TROUBLESHOOTING.md  USER_GUIDE.md
infra/: .env.example  Caddyfile  Dockerfile.ui  docker-compose.yml  mosquitto.conf
public/: pwa-install.js  sw.js
scripts/: build-server-exe.bat  build-server-exe.mjs  generate-pwa-icons.mjs  (+1 more)
(+218 files in other folders)
