[package]
name = "dmx_desktop_shell"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["dialog-message", "shell-open", "system-tray"] }
tauri-plugin-log = "0.2"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
